# vins

vins/back_end/: CMakeLists.txt  package.xml
vins/back_end/include/: optimization.hpp  parameter.hpp
vins/back_end/msg/: kf.msg  up_kf.msg
vins/back_end/src/: back_end_node.cpp  optimization.cpp  parameter.cpp
vins/tracking/: CMakeLists.txt  package.xml
vins/tracking/include/: parameter.hpp  tracking.hpp
vins/tracking/launch/: euroc.launch
vins/tracking/src/: parameter.cpp  test.cpp  tracking.cpp  tracking_node.cpp
