<?xml version="1.0"?>
<package>
  <name>back_end</name>
  <version>0.0.0</version>
  <description>back_end package</description>

  <maintainer email="jhdong@mae.cuhk.edu.hk">tony-ws</maintainer>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>camera_model</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>camera_model</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>camera_model</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>